--- a/style.css
+++ b/style.css
@@ -854,6 +854,11 @@ form#contact-us-form {
     align-items: center;
   }
 
+  
+  .contact-links-1{
+    gap: 65px;
+  }
+
   .links-content h4{
     font-size: 14px;
     text-align: center;
@@ -975,6 +980,11 @@ form#contact-us-form {
   }
 
   .contact-links{
+    margin-top: 30px;
+  }
+
+  .contact-links-1{
+    gap: 30px;
     margin-top: 30px;
   }
 
