--- a/style.css
+++ b/style.css
@@ -337,6 +337,11 @@ ul.nav li .dropdown a:hover{
     margin: 0px auto;
 }
 
+.left-header-mobile{
+  display: none;
+}
+
+
 .left-header p{
   font-size: 12px;
   margin: 0;
@@ -777,6 +782,25 @@ form#contact-us-form {
     display: none;
   }
 
+  .left-header-mobile{
+    display: block;
+  }
+    
+  .left-header-mobile img{
+    width: 70px;
+    position: absolute;
+    top: 20px;
+    left: 50px;
+  }
+
+  .left-header-mobile p{
+    position: absolute;
+    top: 90px;
+    left: 20px;
+    font-size: 12px;
+    color: #fff;
+  }
+
   .hamburger, .cross, .menu{
     display: block;
   }
@@ -882,21 +906,40 @@ form#contact-us-form {
   .header{
     display: none;
   }
-   
+    
+  .left-header-mobile{
+    display: block;
+  }
+    
+  .left-header-mobile img{
+    width: 50px;
+    position: absolute;
+    top: 20px;
+    left: 50px;
+  }
+
+  .left-header-mobile p{
+    position: absolute;
+    top: 70px;
+    left: 20px;
+    font-size: 10px;
+    color: #fff;
+  }
+
   .hamburger, .cross, .menu{
     display: block;
   }
 
   .wrapper-text{
-    font-size: 35px;
+    font-size: 40px;
   }
 
   .wrapper-text h5.text-center {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .wrapper-one p, .wrapper-two p, .wrapper-three p{
-    font-size: 14px;
+    font-size: 18px;
   }
 
   .interior-emulsion-div img{
